--- a/packages/ui/src/index.css
+++ b/packages/ui/src/index.css
@@ -26,6 +26,7 @@
     0 1px 3px 0 rgba(60, 75, 100, 0.2);
   --card-text-color: var(--accent-color);
   --card-text-secondary-color: #a9b8cc;
+  --card-bg-hover: hsl(214 32% 97%);
 
   --badge-bg: var(--text-secondary-color);
   --badge-text-color: var(--text-color);
@@ -116,6 +117,7 @@
   --card-shadow: 0 0 0 1px rgba(70, 84, 109, 0.2) inset;
   --card-text-color: var(--accent-color-d1);
   --card-text-secondary-color: var(--accent-color);
+  --card-bg-hover: #313949;
 
   --separator-color: #4b5563;
 
